Defined general page and soft reset styles.

--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,31 @@
+:root {
+  --primaryColor: #68e1fd;
+  --headingColor: #000f37;
+  --paragraphColor: #4f4f4f;
+}
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html,
+body {
+  height: 100%;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-family: "Open Sans", sans-serif;
+  font-size: 1.6rem;
+  line-height: 2.7rem;
+}
