--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,17 @@ html {
 body {
   font-family: "Open Sans", sans-serif;
   font-size: 1.4rem;
-  line-height: 1.5em;
+  line-height: 1.4em;
+}
+
+h1,
+h2 {
+  color: var(--headingColor);
+}
+
+p {
+  color: var(--paragraphColor);
+  font-weight: 500;
 }
 
 /* Links */
@@ -118,4 +128,61 @@ header ul li {
   margin-top: 2em;
   padding: 0.5em 1.8em;
   cursor: pointer;
+}
+
+/* Main */
+
+.main-container {
+  background-color: var(--primaryColor);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 5em;
+}
+
+.main-description {
+  max-width: 550px;
+  text-align: center;
+  margin-bottom: 4.5em;
+}
+
+.main-description h2 {
+  margin-bottom: 0.8em;
+}
+
+.services-box {
+  background-color: #fff;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 80%;
+}
+
+.services-list-container ul li {
+  position: relative;
+  list-style: none;
+  font-weight: 700;
+  margin: 1.5em 1em;
+}
+
+.services-list-container ul li::before {
+  content: url(/assets/icomoon/SVG/check_circle_outline.svg);
+  position: absolute;
+  top: -3.5px;
+  left: -26px;
+  opacity: 0.25;
+}
+
+.services-img-container {
+  width: 30%;
+}
+
+.services-img {
+  display: block;
+  margin: 0 auto;
+  width: 100%;
 }
