--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,7 @@ header ul li {
   border: none;
   font-weight: 800;
   margin-top: 2em;
-  padding: 0.5em 1.8em;
+  padding: 0.9em 1.8em;
   cursor: pointer;
 }
 
@@ -139,6 +139,7 @@ header ul li {
   align-items: center;
   justify-content: space-evenly;
   max-width: 1200px;
+  width: 100%;
   margin: 0 auto;
   padding: 5em;
 }
@@ -159,7 +160,7 @@ header ul li {
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
-  width: 80%;
+  width: 85%;
 }
 
 .services-list-container ul li {
@@ -185,4 +186,25 @@ header ul li {
   display: block;
   margin: 0 auto;
   width: 100%;
+}
+
+/* Footer */
+
+.footer-container {
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  padding: 2em 3.5em;
+}
+
+.footer-rights {
+}
+
+.footer-social {
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+  width: 15rem;
 }
