--- a/css/style.css
+++ b/css/style.css
@@ -200,11 +200,16 @@ header ul li {
 }
 
 .footer-rights {
+  font-size: 1.3rem;
 }
 
 .footer-social {
   list-style: none;
   display: flex;
   justify-content: space-around;
-  width: 15rem;
+  width: 17rem;
+}
+
+.footer-social svg {
+  width: 20px;
 }
